# target-salesforce-v3

./: .gitignore  README.md  meltano.yml  pyproject.toml  ruff.toml
.github/workflows/: lint.yml  test.yml
samples/: data-campaigns.singer  data-companies.singer  data-contacts.singer  data-deals.singer
target_salesforce_v3/: __init__.py  auth.py  client.py  countries.json  exceptions.py  lambda.py  sinks.py  target.py  utils.py
templates/: README.md  config.json
tests/: __init__.py  test_core.py  test_strip_empty_associations.py
