[tool.poetry]
name = "target-salesforce-v3"
version = "0.0.1"
description = "`target-salesforce-v3` is a Singer target for SalesforceV3, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["FirstName LastName <firstname.lastname@example.com>"]
keywords = [
    "ELT",
    "SalesforceV3",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
target-hotglue = {git = "https://gitlab.com/hotglue/target-hotglue-sdk.git"}
requests = "^2.31.0"
backports-cached-property = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["target_salesforce_v3"]
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["target_salesforce_v3"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-salesforce-v3 = 'target_salesforce_v3.target:TargetSalesforceV3.cli'
